Replace unsupported GC VM options of JDK 11